--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "<TBD>",
+	"name": "app-feedback",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -21,7 +21,7 @@
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
 		"@tailwindcss/postcss": "^4",
-		"@types/node": "^20",
+		"@types/node": "^20.19.26",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"eslint": "^9",
